Style active and not active on menu__link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="menu">
     <div class="menu__section left">
       <img class="menu__icon" src="assets/burger-icon.svg" alt="Settings" />
-      <a href="" class="menu__link">All</a>
+      <a href="" class="menu__link active">All</a>
       <a href="" class="menu__link">Images</a>
     </div>
 
