Style main content

--- a/index.html
+++ b/index.html
@@ -29,5 +29,25 @@
       </div>
     </div>
   </header>
+
+  <main class="content">
+    <img class="content__logo" src="assets/logo.svg" alt="UI Clone" />
+
+    <input
+      class="content__search"
+      type="text"
+    />
+
+    <div class="content__offer">
+      Made with ❤️ by
+      <a
+        href="https://github.com/sergiocme/"
+        target="__blank"
+      >
+        Sérgio Carvalho
+      </a>
+      for studying purposes.
+    </div>
+  </main>
 </body>
 </html>
