--- a/index.html
+++ b/index.html
@@ -49,5 +49,17 @@
       for studying purposes.
     </div>
   </main>
+
+  <footer class="footer">
+    <div class="footer__section footer__location">
+      <span>Brazil</span>
+    </div>
+
+    <div class="footer__section footer__links">
+      <a>Settings</a>
+      <a>Privacy</a>
+      <a>Terms</a>
+    </div>
+  </footer>
 </body>
 </html>
