Add search icon

--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
   <main class="content">
     <img class="content__logo" src="assets/logo.svg" alt="UI Clone" />
 
-    <input
-      class="content__search"
-      type="text"
-    />
+    <div class="content__section search">
+      <input
+        class="content__search"
+        type="text"
+      />
+      <img class="content__search--icon" src="assets/search.svg" alt="Search" />
+    </div>
 
     <div class="content__offer">
       Made with ❤️ by
