Add seach buttons

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       <img class="content__search--icon" src="assets/search.svg" alt="Search" />
     </div>
 
+    <div class="content__search-buttons">
+      <button class="content__search-buttons--search" type="button">
+        Seach
+      </button>
+      <button class="content__search-buttons--lucky" type="button">
+        I'm feeling lucky
+      </button>
+    </div>
+
     <div class="content__offer">
       Made with ❤️ by
       <a
